--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "author": "Netcode",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^9.0.0",
     "express": "^4.17.1",
     "io": "^1.0.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.7",
     "nodemon": "^2.0.7"
   }
