--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "cors": "^2.8.5",
     "dotenv": "^9.0.0",
     "express": "^4.17.1",
+    "gridfs-stream": "^1.1.1",
     "io": "^1.0.3",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.7",
+    "mongodb": "^3.6.6",
+    "mongoose": "^5.12.8",
+    "multer": "^1.4.2",
+    "multer-gridfs-storage": "^4.2.0",
     "nodemon": "^2.0.7"
   }
 }
