--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Netcode",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.4.4",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -17,6 +18,7 @@
     "express": "^4.17.1",
     "gridfs-stream": "^1.1.1",
     "io": "^1.0.3",
+    "jade": "^1.11.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.8",
