--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^9.0.0",
     "express": "^4.17.1",
     "gridfs-stream": "^1.1.1",
@@ -24,6 +25,7 @@
     "mongoose": "^5.12.8",
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^4.2.0",
+    "nodemailer": "^6.6.1",
     "nodemon": "^2.0.7"
   }
 }
