service and product

--- a/package.json
+++ b/package.json
@@ -10,18 +10,22 @@
   "author": "Netcode",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.4.4",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^9.0.0",
     "express": "^4.17.1",
     "gridfs-stream": "^1.1.1",
     "io": "^1.0.3",
+    "jade": "^1.11.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.8",
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^4.2.0",
+    "nodemailer": "^6.6.1",
     "nodemon": "^2.0.7"
   }
 }
