--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "io": "^1.0.3",
     "jade": "^1.11.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.8",
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^4.2.0",
     "nodemailer": "^6.6.1",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "socket.io": "^2.3.0"
   }
 }
