--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "license": "ISC",
   "dependencies": {
     "@sendgrid/mail": "^7.4.4",
+    "async": "^3.2.1",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "bson": "^4.5.1",
+    "cloudinary": "^1.26.3",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^9.0.0",
     "express": "^4.17.1",
+    "formidable": "^1.2.2",
     "gridfs-stream": "^1.1.1",
     "io": "^1.0.3",
     "jade": "^1.11.0",
@@ -24,11 +28,14 @@
     "moment": "^2.29.1",
     "mongod": "^2.0.0",
     "mongodb": "^3.6.6",
-    "mongoose": "^6.0.2",
+    "mongoose": "^6.0.4",
+    "mongoose-history": "^0.8.0",
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^4.2.0",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.6.3",
     "nodemon": "^2.0.7",
-    "socket.io": "^2.3.0"
+    "path": "^0.12.7",
+    "socket.io": "^2.4.1"
   }
 }
